--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,18 @@
 /*  your css code here. If applicable */
+#yellow{
+	border-style:solid;
+	border-color:green;
+	background-color:yellow;
+}
+
+#red{
+	background-color:red;
+	border-color:black;
+	border-style:solid;
+}
+
+#green{
+	background-color:green;
+	border-color:yellow;
+	border-style:solid;
+}
