--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,15 @@
 /*  your css code here. If applicable */
 #yellow{
-	border-style:solid;
-	border-color:green;
+	border:1px solid green;
 	background-color:yellow;
 }
 
 #red{
 	background-color:red;
-	border-color:black;
-	border-style:solid;
+	border:1px solid black
 }
 
 #green{
 	background-color:green;
-	border-color:yellow;
-	border-style:solid;
+	border:1px solid yellow
 }
